--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,28 +32,29 @@
     z-index: -1;
 }
 
-.bg-img2 {
+/* --- Structured Light 3D Scanners Precise3DM Offers --- */
+
+.bg-img4 {
     position: relative;
     width: 100%;
+    height: 328px;
     overflow: hidden;
     background-image: url('../img/img_1.png');
     /* change image as needed */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    filter: blur(10px);
+    /* filter: blur(10px); */
     z-index: -1;
 }
 
-.bg-img2::before {
+.bg-img4::before {
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 300px;
-    /* Optional: You can set the same background image here if desired 
-       or remove this block if not needed */
     background-image: url('../img/img_1.png');
     background-size: cover;
     background-position: center;
@@ -62,7 +63,62 @@
     z-index: -1;
 }
 
-.bg-img2::after {
+.bg-img4::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+}
+
+
+.positon-img-1{
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+
+
+}
+
+
+/* ------------------img 3 ------------------------------------------- */
+
+.bg-img3 {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    background-image: url('../img/bg-img-2.png');
+    /* change image as needed */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* filter: blur(10px); */
+    z-index: -1;
+}
+
+.bg-img3::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background-image: url('../img/bg-img-2.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(10px);
+    z-index: -1;
+}
+
+.bg-img3::after {
     content: "";
     position: absolute;
     top: 0;
@@ -77,52 +133,8 @@
     color: #FF931E;
 }
 
-
-
-.bor {
-    border: 1px sold black;
-    background: linear-gradient(87.87deg, #1E1E1E 27.31%, rgba(30, 30, 30, 0.2) 262.61%);
-    color: white;
-    border-radius: 10px;
-    padding: 15px;
-    margin-top: 20px;
+.orange-btn {
+    background: linear-gradient(0deg, #FF931E, #FF931E),
+        radial-gradient(63.11% 63.11% at 31.97% 19.67%, rgba(255, 255, 255, 0.5) 0%, rgba(255, 255, 255, 0) 69.79%, rgba(255, 255, 255, 0) 100%);
 }
 
-.org {
-    color: orange;
-}
-
-.btn1 {
-    color: white;
-    background-color: #FF9421;
-}
-
-.bor1 {
-    margin-top: 30px;
-    border: 1px sold black;
-    background: linear-gradient(87.87deg, #1E1E1E 27.31%, rgba(30, 30, 30, 0.2) 262.61%);
-    color: white;
-    border-radius: 10px;
-    padding: 15px;
-    text-align: center;
-}
-
-.back-img {
-    background-image: url(./image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.list {
-    list-style: none;
-}
-
-.bor2 {
-
-    color: white;
-    margin-top: 20px;
-}
-
-.marg {
-    padding: 20px;
-}
